Fix white space in background when scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ body {
   background-size: cover;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
   color: white;
+  overflow: hidden;
 }
 
 #logo {
